fix menu spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1631,7 +1631,7 @@ footer {
 
     #collection-list-nav {
         width:100%;
-        height:6.75em;
+        height:10.25em;
         list-style-type: none;
         font-family: "AvenirNextLTW01-Medium";
         clear:both;
